--- a/templates/expense.html
+++ b/templates/expense.html
@@ -10,7 +10,7 @@
 <body>
 
     <div id="header">
-        <a href="#" id="branding">Personal Finance</a>
+        <a href="/" id="branding">Personal Finance</a>
     </div>
 
     <div id="expense">
