--- a/templates/home.html
+++ b/templates/home.html
@@ -10,10 +10,27 @@
 <body>
 
     <div id="header">
-        <a href="#" id="branding">Personal Finance</a>
+        <a href="/" id="branding">Personal Finance</a>
         <div class="floatright-group">
             <a href="/expense">Add Expense</a>
             <a href="#">Log Out</a>
+        </div>
+    </div>
+
+    <div id="sticker-board">
+        <div class="sticker">
+            <h5>Budget</h5>
+            <h2>10000</h2>
+        </div>
+
+        <div class="sticker">
+            <h5>Expenses</h5>
+            <h2>5000</h2>
+        </div>
+
+        <div class="sticker">
+            <h5>Balance</h5>
+            <h2>5000</h2>
         </div>
     </div>
 
