--- a/static/styles.css
+++ b/static/styles.css
@@ -33,18 +33,25 @@ a {
 }
 
 
-/* Sign Up and Log In*/
+/* Forms */
 
 #signup, #expense {
-    display: block;
-    text-align: center;
+    display: flex;
+    justify-content: center;
     margin: 50px 0 0 0;
 }
 
+#expense form div, #signup form div {
+    margin: 10px 0 0 0;
+}
 
 input[type="text"], input[type="password"], input[type="number"], input[type="date"], select  {
     padding: 10px 20px 10px 20px;
-    margin: 30px 0 0 0;
+    margin: 10px 0 0 0;
+}
+
+textarea {
+    margin: 10px 0 0 0;
 }
 
 input[type=submit] {
@@ -64,11 +71,15 @@ input[type=submit] {
 .sticker {
     background-color: #2F4858;
     color: #F6AE2D;
-    padding: 20px 50px 20px 50px;
+    width: 180px;
+    height: 150px;
+    text-align: center;
+    padding: 30px 0 0 0;
     margin: 0 20px 0 20px;
     border: 1px solid #2F4858;
     border-radius: 7px;
 }
+
 
 /* Transactions */
 #transactions {
@@ -88,12 +99,6 @@ input[type=submit] {
 
 #transactions th {
   padding: 15px 0px 15px 0px;
-  text-align: center;
   background-color: #2F4858;
   color: #F6AE2D;
-}
-
-#transactions tr:hover {
-    background-color: #2F4858;
-    color: #F6AE2D;
 }
