add login logout session system

--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
         <a href="/" id="branding">Personal Finance</a>
         <div class="floatright-group">
             <a href="/expense">Add Expense</a>
-            <a href="#">Log Out</a>
+            <a href="/logout">Log Out</a>
         </div>
     </div>
 
