--- a/templates/signup.html
+++ b/templates/signup.html
@@ -10,7 +10,10 @@
 <body>
 
     <div id="header">
-        <a href="#" id="branding">Personal Finance</a>
+        <a href="/" id="branding">Personal Finance</a>
+        <div class="floatright-group">
+            <a href="/login">Login</a>
+        </div>
     </div>
 
     <div id="signup">
