--- a/templates/login.html
+++ b/templates/login.html
@@ -10,20 +10,23 @@
 <body>
 
     <div id="header">
-        <a href="#" id="branding">Personal Finance</a>
+        <a href="/" id="branding">Personal Finance</a>
+        <div class="floatright-group">
+            <a href="/signup">Signup</a>
+        </div>
     </div>
 
     <div id="signup">
 
-        <form action="index.html" method="post">
+        <form action="/login" method="post">
             <div>
                 <label for="username">Username: </label>
-                <input type="text" placeholder="Username" id="username" required>
+                <input type="text" placeholder="Username" id="username" name="username" required>
             </div>
 
             <div>
                 <label for="password">Password: </label>
-                <input type="password" placeholder="******" id="password" required>
+                <input type="password" placeholder="******" id="password" name="password" required>
             </div>
 
             <input type="submit" value="Log In">
