connect expentiture and user

--- a/templates/login.html
+++ b/templates/login.html
@@ -12,7 +12,7 @@
     <div id="header">
         <a href="/" id="branding">Personal Finance</a>
         <div class="floatright-group">
-            <a href="/signup">Signup</a>
+            <a href="/signup">Sign Up</a>
         </div>
     </div>
 
