--- a/templates/signup.html
+++ b/templates/signup.html
@@ -12,7 +12,7 @@
     <div id="header">
         <a href="/" id="branding">Personal Finance</a>
         <div class="floatright-group">
-            <a href="/login">Login</a>
+            <a href="/login">Log In</a>
         </div>
     </div>
 
